--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/HurryPorter_WebGl.loader.js";
       var config = {
-        dataUrl: buildUrl + "/HurryPorter_WebGl.data",
-        frameworkUrl: buildUrl + "/HurryPorter_WebGl.framework.js",
-        codeUrl: buildUrl + "/HurryPorter_WebGl.wasm",
+        dataUrl: buildUrl + "/HurryPorter_WebGl.data.br",
+        frameworkUrl: buildUrl + "/HurryPorter_WebGl.framework.js.br",
+        codeUrl: buildUrl + "/HurryPorter_WebGl.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "TeroGames",
         productName: "Hurry Porter",
